--- a/blog/package.json
+++ b/blog/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "dotenv": "^16.0.0",
+    "flexsearch": "^0.7.21",
     "gatsby": "^4.13.1",
     "gatsby-background-image": "^1.6.0",
     "gatsby-image": "^3.11.0",
@@ -17,6 +18,7 @@
     "gatsby-plugin-gatsby-cloud": "^4.10.0",
     "gatsby-plugin-google-analytics": "^4.10.0",
     "gatsby-plugin-image": "^2.10.0",
+    "gatsby-plugin-local-search": "^2.0.1",
     "gatsby-plugin-manifest": "^4.10.0",
     "gatsby-plugin-offline": "^5.10.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
@@ -33,10 +35,12 @@
     "gatsby-transformer-sharp": "^4.10.0",
     "gbimage-bridge": "^0.2.1",
     "graphql": "^15.8.0",
+    "install": "^0.13.0",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-use-flexsearch": "^0.1.1",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
