--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^0.27.2",
     "gatsby-background-image": "^1.6.0",
+    "js-search": "^2.0.0",
     "node": "^17.7.1"
   }
 }
