--- a/blog/package.json
+++ b/blog/package.json
@@ -35,12 +35,15 @@
     "gatsby-transformer-sharp": "^4.10.0",
     "gbimage-bridge": "^0.2.1",
     "graphql": "^15.8.0",
+    "graphql-type-json": "^0.3.2",
     "install": "^0.13.0",
+    "lunr": "^2.3.9",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-use-flexsearch": "^0.1.1",
+    "striptags": "^3.2.0",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
