--- a/blog/package.json
+++ b/blog/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-google-analytics": "^4.10.0",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-local-search": "^2.0.1",
+    "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^4.10.0",
     "gatsby-plugin-offline": "^5.10.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
