--- a/blog/package.json
+++ b/blog/package.json
@@ -8,7 +8,10 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "algoliasearch": "^4.13.0",
     "babel-plugin-styled-components": "^2.0.6",
+    "commentbox.io": "^2.1.0",
     "dotenv": "^16.0.0",
     "flexsearch": "^0.7.21",
     "gatsby": "^4.13.1",
@@ -16,11 +19,13 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.10.0",
     "gatsby-plugin-gatsby-cloud": "^4.10.0",
+    "gatsby-plugin-gitalk": "^1.2.6",
     "gatsby-plugin-google-analytics": "^4.10.0",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-local-search": "^2.0.1",
     "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^4.10.0",
+    "gatsby-plugin-node-fields": "^3.1.0",
     "gatsby-plugin-offline": "^5.10.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.0",
@@ -31,19 +36,21 @@
     "gatsby-remark-responsive-iframe": "^5.10.0",
     "gatsby-remark-smartypants": "^5.10.0",
     "gatsby-source-contentful": "^7.8.1",
-    "gatsby-source-filesystem": "^4.10.0",
+    "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-gitinfo": "^1.1.0",
     "gatsby-transformer-remark": "^5.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
     "gbimage-bridge": "^0.2.1",
     "graphql": "^15.8.0",
     "graphql-type-json": "^0.3.2",
     "install": "^0.13.0",
-    "lunr": "^2.3.9",
+    "instantsearch.js": "^4.40.5",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-use-flexsearch": "^0.1.1",
+    "remove-markdown": "^0.5.0",
     "striptags": "^3.2.0",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "0.0.72",
