--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-algolia": "^0.26.0",
     "js-search": "^2.0.0",
     "node": "^17.7.1"
   }
