--- a/blog/package.json
+++ b/blog/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-is": "^18.1.0",
     "react-use-flexsearch": "^0.1.1",
     "remove-markdown": "^0.5.0",
     "striptags": "^3.2.0",
