Server-less comments

--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "algoliasearch": "^4.13.0",
     "babel-plugin-styled-components": "^2.0.6",
     "commentbox.io": "^2.1.0",
+    "contentful-management": "^10.3.1",
     "dotenv": "^16.0.0",
     "flexsearch": "^0.7.21",
     "gatsby": "^4.13.1",
@@ -43,10 +44,13 @@
     "gbimage-bridge": "^0.2.1",
     "graphql": "^15.8.0",
     "graphql-type-json": "^0.3.2",
+    "http-proxy-middleware": "^2.0.6",
     "install": "^0.13.0",
     "instantsearch.js": "^4.40.5",
+    "netlify-lambda": "^2.0.15",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
+    "react-commentbox": "^3.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-is": "^18.1.0",
