--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "algoliasearch": "^4.13.0",
     "babel-plugin-styled-components": "^2.0.6",
     "commentbox.io": "^2.1.0",
+    "contentful": "^9.1.28",
     "contentful-management": "^10.3.1",
     "dotenv": "^16.0.0",
     "flexsearch": "^0.7.21",
