--- a/blog/package.json
+++ b/blog/package.json
@@ -50,6 +50,7 @@
     "instantsearch.js": "^4.40.5",
     "netlify-lambda": "^2.0.15",
     "prismjs": "^1.27.0",
+    "pusher-js": "^7.1.0-beta",
     "react": "^17.0.1",
     "react-commentbox": "^3.0.1",
     "react-dom": "^17.0.1",
